Fullstack/frontend/src/styles/Pages/Repos/SubPages/RepoPage.module.css
.header {
    display: flex;
    width: 100%;
    border-bottom: 2px solid var(--primary);
    margin-bottom: 10px;
    gap: 10px;
}

.header.spaced {
    justify-content: space-between;
}

.visibility {
    background: var(--lightsecondary);
    padding: 4px 8px;
    border-radius: 4px;
    font-size: 0.8rem;
    color: var(--text);
    height: fit-content;
    align-self: center;
}


.repoDetails {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.clone {
    display: flex;
    gap: 10px;
    align-items: center;
}


.copyButton {
    padding: 8px;
    font-size: 1rem;
    border: 1px solid var(--border);
    border-radius: 4px;
    background-color: var(--lightsecondary);
    cursor: pointer;
    transition: background-color 0.1s ease-in-out;
}

.copyButton:hover {
    background-color: var(--secondary);
}



.readme {
    border-bottom: 2px solid var(--primary);
    margin-bottom: 10px;
}

